# nextjs-fastapi-foundation

./: .gitignore  AGENTS.md  INSTRUCTIONS.md  README.md  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  documentation.instructions.md  frontend.instructions.md
.github/workflows/: backend-ci.yml
backend/: .env.example  README.md  openapi.json  pyproject.toml
backend/app/: main.py
backend/app/api/: errors.py  router.py
backend/app/api/routes/: root.py  system.py
backend/app/core/: config.py  exceptions.py  logging.py  request_context.py
backend/app/database/: base.py  engine.py  session.py
backend/app/middleware/: request_id.py
backend/app/schemas/: errors.py  system.py
backend/app/services/: system.py
backend/migrations/: env.py
backend/migrations/versions/: 211caf2bc442_establish_baseline.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_errors.py  test_health.py  test_openapi.py  test_ready.py  test_request_id.py  test_root.py
docs/: api-standards.md  architecture.md  changelog.md  coding-standards.md  contributing.md  database-standards.md  project-philosophy.md  testing-standards.md
docs/adr/: 0001-use-nextjs-and-fastapi.md  0002-use-postgresql.md  0003-use-async-sqlalchemy-2.md  0004-use-alembic-for-migrations.md  0005-generate-frontend-client-from-openapi.md  0006-use-server-components-by-default.md  0007-build-backend-foundation-before-integration.md  README.md
frontend/: .env.example  README.md  jest.config.ts  package.json  pnpm-lock.yaml
(+22 files in other folders)
